--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -22,6 +22,9 @@
                                 <li class="form__list-item">
                                     <span class="form__txt form__txt_accent">{{words[2]}}, {{words[5]}}, {{words[3]}}</span>
                                 </li>
+                                <li class="form__list-item">
+                                    <span class="form__txt form__txt_accent">{{words[3]}}, {{words[5]}}, {{words[2]}}</span>
+                                </li>
                             </ul>                           
                         </div>
                         <div class="form__box-bottom">
